public class OnlineStatement extends BankStatement {

    public void send(){
        System.out.println("Sending statement online");
    }
}
